--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sys Estoque</title>
 </head>
 <body>
-    <h2 id="area">Bem Vindo(a)!</h2>
+    <h2 id="area">Gerenciamento de Estoque</h2>
     <button onclick="entrar()">Acessar</button>
+    <button onclick="cadastrar()">Cadastre-se</button>
     <script src="script.js"></script>
 </body>
 </html>
