Atualização da função 'entrar' para redirecionar para a pagina 'calculadora'.

--- a/calculadora.html
+++ b/calculadora.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <!--Essa função onsubmit atualiza a pagina no fim de um preenchimento de cadastro-->
-    <form onsubmit="return calcular(event)">
+    <form id="form-calc" onsubmit="return calcular(event)">
         <label>Digite seu peso: </label><br/>
         <input type="text" name="peso" id="peso" placeholder="Exemplo 65"><br/><br/>
 
