Implementação lista-de-compras com a função renderTarefas para listar

--- a/calculadora.html
+++ b/calculadora.html
@@ -19,6 +19,6 @@
 
     <div id="resultado"></div>
 
-    <script src="script.js"></script>
+    <script src="./scripts/calculadora.js"></script>
 </body>
 </html>
