--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
     </form>
     <br/>
     <button onclick="cadastrar()">Cadastre-se</button>
-    <script src="script.js"></script>
+    <script src="./scripts/script.js"></script>
 </body>
 </html>
